# peacock

./: Cargo.toml  README.md  TODO  rustfmt.toml  template.c  test.c
src/: automaton.rs  error.rs  grammar.rs  lib.rs
src/backends/: mod.rs
src/backends/C/: codegen.rs  formatter.rs  grammar.rs  mod.rs
src/backends/interpreter/: mod.rs
src/backends/json/: generator.rs  mod.rs
src/components/: ffi.rs  generator.rs  input.rs  mod.rs  mutator.rs
src/grammar/: builder.rs  cfg.rs  error.rs  merge.rs  mod.rs
src/parser/: gramatron.rs  json.rs  mod.rs  peacock.rs
src/tests/: grammar.rs  mod.rs  test_grammar.rs
src/tests/grammars/: cnf.json  cycles.json  gnf.json  left_factoring.json  part_1.json  part_2.json  part_3.json  syntax.json  unused.json
test-data/C/: bench_generation.c  fuzz_mutate.c  fuzz_unparse.c  test_generation.c  test_mutate.c  test_unparse.c
test-data/benchmarks/: .gitignore  Makefile  README.md  baseline.c  gramatron-patch  grammar.json  nop.c  patch-libafl  throughput.c
test-data/fuzz/: main.c
test-data/grammars/: duplicate_rules.json  gramatron.json  invalid-refs.json  mixed_rules.json  recursion.json  test-peacock.json  unit_rules.json  unused_rules.json
test-data/libfuzzer/: .gitignore  Makefile  generator.h  harness.c
test-data/static_loading/: .gitignore  Cargo.toml  build.rs
test-data/static_loading/src/: main.rs
