[package]
name = "peacock-fuzz"
description = "Library to parse context-free grammars and create grammar-based fuzzing tools"
version = "0.1.1"
edition = "2021"
license-file = "COPYING"
readme = "README.md"
repository = "https://github.com/z2-2z/peacock"
keywords = ["fuzzing", "grammars"]
include = [
    "/src",
]

[profile.release]
lto = true
codegen-units = 1
debug = true
panic = "abort"

[dependencies]
serde_json = { version = "1.0", features = ["default", "preserve_order"] }
json_comments = "0.2"
thiserror = "1.0"
ahash = { version = "0.8", default-features = false, features = ["std", "compile-time-rng"] }
petgraph = "0.6"
itertools = "0.12"
libloading = "0.8"
clap = { version = "4.4", features = ["derive"] }
serde = "1.0"
libafl = { version = "0.11", default-features = false, features = [
    "std", "derive", "llmp_compression", "llmp_small_maps", "llmp_broker_timeouts", "rand_trait", "fork", "prelude", "gzip", "serdeany_autoreg", "tui_monitor",
] }
postcard = "1.0"
libafl_bolts = "0.11"
nix = "0.26"

[[bin]]
name = "peacock-dump"
path = "src/bin/dump.rs"

[[bin]]
name = "peacock-fuzz"
path = "src/bin/fuzz.rs"

[[bin]]
name = "peacock-compile"
path = "src/bin/compile.rs"

[[bin]]
name = "peacock-merge"
path = "src/bin/merge.rs"

[[bin]]
name = "peacock-gen"
path = "src/bin/gen.rs"

[features]
default = ["components"]

# Enables debugging of generated code by the C backend by inserting printf() statements
# at the beginning of each function call.
debug-codegen = []

docs-rs = ["libafl/document-features"]

# For the LibAFL components: Activate this when a generator is statically compiled into the fuzzer
static-loading = ["components"]

# Include LibAFL components in library
components = []

[package.metadata.docs.rs]
features = ["docs-rs"]
rustc-args = ["--cfg", "docsrs"]
