[package]
name = "static_loading"
version = "0.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
peacock-fuzz = { path = "../..", features = ["static-loading"] }
libafl = "0.13.0"
libafl_bolts = "0.13.0"
nix = "0.29"

[build-dependencies]
peacock-fuzz = { path = "../.." }
cc = "1.0"
